# Switchboard

./: LICENSE  README.md  TESTING.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 202412190000_init.sql  202412190001_knowledge.sql  20250104171600_add_project_keys.sql  20250104180000_create_project_notes.sql  20250104181500_add_project_settings.sql  20250104190000_add_timestamps_to_projects.sql  20260128000000_create_project_links.sql  20260128000001_add_kind_to_links.sql  20260128000002_add_cwd_to_links.sql  20260128000003_add_kind_to_notes.sql  20260128000004_create_project_connections.sql
src-tauri/src/: lib.rs
src-tauri/src/database/: mod.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/databases/: commands.rs  mod.rs  models.rs  repository.rs  service.rs
src-tauri/src/modules/git/: mod.rs
src-tauri/src/modules/llm/: commands.rs  models.rs  service.rs
src-tauri/src/modules/processes/: commands.rs  models.rs  service.rs
src-tauri/src/modules/projects/: commands.rs  mod.rs  models.rs  repository.rs  service.rs
src-tauri/src/modules/ssh/: commands.rs  mod.rs  models.rs  service.rs
src-tauri/src/modules/system/: mod.rs
src-tauri/src/modules/terminal/: commands.rs  models.rs  service.rs
src-tauri/src/modules/vault/: service.rs
src-tauri/src/shared/: utils.rs
src/components/: ProjectCard.tsx  ReadmeGenerator.tsx  SSHHostList.tsx  (+1 more)
(+20 files in other folders)
