[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
keyring = "2"
anyhow = "1.0"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
ssh2-config = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5.0"
portable-pty = "0.8"
tauri-plugin-shell = "2"
localauthentication-rs = "0.1.0"
security-framework = "3.5.1"
security-framework-sys = "2.15.0"
